# Rust-Actix-Library-Automation

./: .gitignore  Cargo.toml  Library-Rust.postman_collection.json  README.md  db.sqlite
api/: Cargo.toml
api/src/: lib.rs
api/src/controllers/: book_controller.rs  library_controller.rs  member_controller.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs  schema.rs
domain/src/models/: mod.rs
domain/src/models/book/: mod.rs
domain/src/models/member/: mod.rs
domain/src/traits/: mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/repositories/: book_repository.rs  library_repository.rs  member_repository.rs  mod.rs
src/: main.rs
