[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["sqlite"] }
domain = { path = "../domain" }
r2d2 = "0.8"
infrastructure = { path = "../infrastructure" }
lazy_static = "1.4.0"